# jorm

./: .gitignore  MANIFEST.in  README.md  pytest-simple.ini  pytest.ini  requirements-test.txt  requirements.txt  ruff.toml  run_tests.py  setup.py
.github/: copilot-instructions.md
.github/workflows/: ci-clean.yml  ci.yml
jorm/: Cargo.toml  LICENSE  README.md  __init__.py  cli.py  engine.py  executor.py  parser.py  run_integration_tests.rs  state_manager.py
jorm-rs/: Cargo.toml  run_integration_tests.rs  table2.csv  tmp_debug_table_copy_dag.txt
jorm-rs/.jorm/: config.toml
jorm-rs/src/: lib.rs  main.rs  shebang.rs
jorm-rs/src/ai/: analysis.rs  chat.rs  generation.rs  interactive.rs  mod.rs  model_manager.rs  models.rs  validation.rs
jorm-rs/src/executor/: config.rs  context.rs  dataflow.rs  error.rs  mod.rs  result.rs  retry.rs  traits.rs
jorm-rs/src/executor/executors/: file.rs  http.rs  mod.rs  python.rs  shell.rs
jorm-rs/src/parser/: dag.rs  mod.rs  parsers.rs
jorm-rs/src/scheduler/: config.rs  cron_scheduler.rs  daemon.rs  mod.rs  triggers.rs
jorm-rs/tests/integration/: ai_generated_dag_test.rs  cli_tests.rs  comprehensive_test_suite.rs  dag_tests.rs  interactive_tests.rs
jorm-rs/tests/unit/: executor_tests.rs  parser_tests.rs  scheduler_tests.rs
jorm/.jorm/: config.toml
jorm/docs/: README.md  api_examples.md  api_reference.md  configuration_reference.md  troubleshooting_guide.md
jorm/src/: lib.rs  main.rs
jorm/src/ai/: analysis.rs  generation.rs  interactive.rs  model_manager.rs
jorm/src/application/: builder.rs  container.rs  dto.rs  errors.rs  mod.rs  services.rs
jorm/src/core/: dag.rs  engine.rs  error.rs  mod.rs  task.rs
jorm/src/domain/: entities.rs  errors.rs  mod.rs  repositories.rs  services.rs  value_objects.rs
jorm/src/executor/: config.rs  context.rs  dataflow.rs  environment.rs  error.rs  file.rs  http.rs  jorm.rs  metrics.rs  mod.rs  output.rs  parallel.rs  python.rs  recovery.rs  resource_monitor.rs  result.rs  retry.rs  rust.rs  scheduler.rs  shell.rs  state.rs  state_manager.rs  tests.rs  traits.rs
jorm/src/executor/executors/: file.rs  http.rs  mod.rs  python.rs  shell.rs
jorm/src/infrastructure/: errors.rs  mod.rs  ports.rs
jorm/src/infrastructure/adapters/: mod.rs
jorm/src/infrastructure/adapters/executors/: mod.rs  native.rs
jorm/src/infrastructure/adapters/parsers/: filesystem.rs  memory.rs  mod.rs
jorm/src/infrastructure/adapters/storage/: memory.rs  mod.rs
jorm/src/nlp/: generator.rs  tests.rs
jorm/src/observability/: correlation.rs  mod.rs
jorm/src/parser/: dag_parser.rs  mod.rs  parsers.rs  tests.rs
jorm/src/scheduler/: cron.rs  daemon.rs  mod.rs
jorm/src/server/: http.rs  mod.rs  tests.rs
jorm/tests/: environment_and_dataflow_tests.rs  integration_tests.rs  mod.rs  unit_tests.rs
jorm/tests/fixtures/: mod.rs
jorm/tests/integration/: ai_generated_dag_test.rs  cli_tests.rs  comprehensive_test_suite.rs  dag_execution_tests.rs  dag_tests.rs  http_server_tests.rs  interactive_tests.rs  mod.rs  native_executor_cli_tests.rs  output_formatting_tests.rs  performance_benchmarks.rs  scheduler_tests.rs  task_executor_integration_tests.rs
jorm/tests/unit/: core_tests.rs  environment_tests.rs  executor_tests.rs  mod.rs  nlp_tests.rs  parser_tests.rs  scheduler_tests.rs
scripts/: install-linux.sh  install-macos.sh  install-windows.ps1  test-installers.ps1  test-installers.sh
tests/: conftest.py  test_cli.py  test_integration.py  test_parser.py  test_phase1_execution.py  test_phase2_scheduling.py  test_phase3_ai_intelligence.py  test_phase4_developer_experience.py  test_phase5_enterprise.py
tests/fixtures/: simple.md  simple.txt
