[package]
name = "jorm"
version = "0.1.0"
edition = "2021"
description = "A fast, reliable DAG execution engine - Rust backend"
authors = ["Sebx"]

[dependencies]
# CLI framework
clap = { version = "4.0", features = ["derive"] }
# Colored output
colored = "2.0"
# Async runtime
tokio = { version = "1.0", features = ["full"] }
# Error handling
anyhow = "1.0"
thiserror = "1.0"
# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# YAML parsing
serde_yaml = "0.9"
# File operations
tokio-fs = "0.1"
# Process execution
tokio-process = "0.2"
# Regex for parsing
regex = "1.0"
# HTTP client
reqwest = { version = "0.11", features = ["json"] }
# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }
# Async traits
async-trait = "0.1"
# Time handling
chrono = { version = "0.4", features = ["serde"] }
# Database (SQLite)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
# CPU count for default concurrency
num_cpus = "1.0"
# Hashing
sha2 = "0.10"
md5 = "0.7"
# Cron expression parsing
cron = "0.12"
# File system watching
notify = "6.0"
# Template engine
tera = "1.19"
# Configuration management
config = "0.14"
# Structured logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"
dirs = "5.0"
toml = "0.8"
hostname = "0.3"

# Daemon/service management (Unix only)
[target.'cfg(unix)'.dependencies]
daemonize = "0.5"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
# HTTP server for webhooks
hyper = { version = "0.14", features = ["full"] }
# TOML parsing
toml = "0.8"
# Timezone support
chrono-tz = "0.8"
# AI/ML dependencies for Phase 3
candle-core = "0.3"
candle-nn = "0.3" 
candle-transformers = "0.3"
tokenizers = "0.15"
# ONNX runtime for cross-platform AI inference
ort = { version = "2.0.0-rc.10" }
# Hugging Face Hub for model downloads
hf-hub = "0.3"
# Async HTTP client for model downloads (already included above)
# reqwest = { version = "0.11", features = ["json", "stream"] }
# Progress bars for model downloads
indicatif = "0.17"
# Directory utilities
dirs = "5.0"
# Configuration file parsing
config = "0.14"
# Hostname detection
hostname = { version = "0.3", optional = true }

[features]
default = ["hostname"]
hostname = ["dep:hostname"]

[dev-dependencies]
# Temporary files for testing
tempfile = "3.0"
# Test utilities
tokio-test = "0.4"
# System information for benchmarks
sysinfo = "0.29"

[[bin]]
name = "run_integration_tests"
path = "run_integration_tests.rs"

# Test organization
[[test]]
name = "dag_tests"
path = "tests/integration/dag_tests.rs"

[[test]]
name = "cli_tests"
path = "tests/integration/cli_tests.rs"

[[test]]
name = "interactive_tests"
path = "tests/integration/interactive_tests.rs"

[[test]]
name = "ai_generated_dag_test"
path = "tests/integration/ai_generated_dag_test.rs"

[[test]]
name = "comprehensive_test_suite"
path = "tests/integration/comprehensive_test_suite.rs"

[[test]]
name = "unit_executor_tests"
path = "tests/unit/executor_tests.rs"

[[test]]
name = "unit_parser_tests"
path = "tests/unit/parser_tests.rs"

[[test]]
name = "unit_scheduler_tests"
path = "tests/unit/scheduler_tests.rs"

[[test]]
name = "native_executor_cli_tests"
path = "tests/integration/native_executor_cli_tests.rs"

[[test]]
name = "output_formatting_tests"
path = "tests/integration/output_formatting_tests.rs"

[[test]]
name = "task_executor_integration_tests"
path = "tests/integration/task_executor_integration_tests.rs"

[[test]]
name = "performance_benchmarks"
path = "tests/integration/performance_benchmarks.rs"

[[test]]
name = "environment_tests"
path = "tests/unit/environment_tests.rs"




