[package]
name = "jorm"
version = "0.1.0"
edition = "2021"
description = "A lightweight DAG execution engine with natural language processing"
authors = ["Jorm Contributors"]
license = "MIT"
repository = "https://github.com/jorm-project/jorm"
homepage = "https://github.com/jorm-project/jorm"
documentation = "https://docs.rs/jorm"
readme = "README.md"
keywords = ["dag", "workflow", "execution", "automation", "nlp"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    "tests/",
    "examples/",
    ".github/",
    ".kiro/",
    "*.md"
]

[dependencies]
# CLI framework
clap = { version = "4.0", features = ["derive"] }
# Async runtime
tokio = { version = "1.0", features = ["full"] }
# Error handling
anyhow = "1.0"
thiserror = "1.0"
# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# HTTP server
hyper = { version = "0.14", features = ["full"] }
# HTTP client for HTTP tasks
reqwest = { version = "0.11", features = ["json"] }
# Cron parsing
cron = "0.12"
# Regex for parsing
regex = "1.0"
# Date and time for logging and scheduling
chrono = { version = "0.4", features = ["serde"] }
# Simple text processing for natural language parsing
# Note: Using lightweight regex-based NLP instead of heavy AI models

[dev-dependencies]
# Temporary files for testing
tempfile = "3.0"
# Test utilities
tokio-test = "0.4"






